--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.5"
+    "redux-devtools-extension": "^2.13.5",
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
