--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
+    "redux-persist": "^5.10.0",
     "reselect": "^3.0.1"
   },
   "scripts": {
